<resources>

    <string name="app_name">Shifa</string>
    <!--/*_*/   Menu navigation app   /*_*/-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_pills">Pills</string>
    <string name="setting">Setting</string>
    <string name="title_advice">Advices</string>

    <!--/*_*/   Login activity   /*_*/-->
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="login">Login</string>
    <string name="account">Already have an account ! | <u>Login now</u></string>

    <string name="no_account">You don\'t have an account ? |<u> Sign up</u></string>
    <!--/*_*/   Sign up activity   /*_*/-->
    <string name="gender">Gender</string>
    <string name="email">Stronghold@email.xyz</string>
    <string name="date">Date of Birth</string>
    <string name="signup">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <!--/*_*/   Home activity   /*_*/-->
    <string name="title_result">Prescription Result</string>
    <string name="title_des">Result</string>
    <string name="search">Searching for something ?</string>
    <string name="title_article">Title</string>
    <string name="test">Quick Test</string>
    <!--/*_*/   advices   /*_*/-->
    <string name="none">No Internet Found</string>
    <string name="filter">Filter</string>
    <string name="alpha">A-Z</string>
    <string name="category">Category</string>
    <!--/-_-/
    add more categories
    ... /-_-/
    -->
    <!--/*_*/   profileFragment fragment   /*_*/-->
    <string name="user_nickname">Patient</string>
    <string name="user_full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="Tall">Tall</string>
    <string name="weight">Weight</string>
    <string name="blood_type">Blood Type</string>
    <string name="diseases">None</string>
    <string name="add">Add Patient</string>
    <!--/*_*/   Setting Activity   /*_*/-->
    <string name="lang">Change Language</string>
    <string name="eng">English</string>
    <string name="arb">Arabic</string>
    <string name="dev_help">help Developers</string>
    <string name="help">Help</string>
    <string name="rate">Rate App</string>
    <!--/*_*/   alert activity   /*_*/-->
    <string name="npf">No Plan Found</string>
    <string name="plan_name">Plan</string>
    <string name="time">HH/MM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">notification</string>
    <string name="last_name">Last name</string>
    <string name="result">Result</string>
    <string name="add_exam">Add Exam</string>
    <string name="exam">Examination name</string>
    <string name="unit">Unit</string>
    <string name="name">First name</string>
    <string name="cnf_psswrd">Confirm Password</string>
    <string name="insertTst">Insert Test</string>
    <string name="fillAllInfo">Fill All Information</string>
    <string name="done">Done</string>
    <string name="forMe">For me</string>
    <string name="forOther" >For Other</string>

    <string-array name="DMY">
        <item>YEAR</item>
        <item>MONTH</item>
        <item>DAY</item>
    </string-array>
</resources>