<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpCosnt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clearbackground"
    tools:context=".Signup">

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/signup"
        android:textColor="@color/slbutton"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/signUpScroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpText">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/signUpCompat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernane_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/username"
                android:inputType="textWebEmailAddress"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/psswrd_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/psswrd_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/cnf_psswrd"
                android:inputType="textPassword"

                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/age"
                android:inputType="numberDecimal"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/genderCompat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="22sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/Gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/border"
                        android:backgroundTint="@color/blue"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center|end"
                        android:hint="@string/male"
                        android:paddingEnd="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:buttonTint="@color/white" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/border"
                        android:backgroundTint="@color/pink"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center|end"
                        android:hint="@string/female"
                        android:paddingEnd="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:buttonTint="@color/white" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:backgroundTint="@color/slbutton"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:padding="10dp"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>