<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clearbackground"
    tools:context=".Exams">

    <ScrollView
        android:id="@+id/examsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049">


        <LinearLayout
            android:id="@+id/examLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/examInfoCompat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/examination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/exam"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/unit"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/appendExam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectange_button"
                android:text="@string/add_exam"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/dark_d4" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectange_button"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/dark_d4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/examsScrollView" />
</androidx.constraintlayout.widget.ConstraintLayout>