<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginConst"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clearbackground">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/login"
        android:textColor="@color/slbutton"
        android:textColorHint="@color/dark_Grey"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/loginScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".Login">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/loginCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="200dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_su"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:drawableEnd="@drawable/baseline_person_24"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/username"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_Grey"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/psswrd_su"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:drawableEnd="@drawable/baseline_lock_24"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_Grey"
                android:textSize="22sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/slbutton"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:padding="2dp"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textColorHint="@color/dark_Grey"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/no_account"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_Grey"
                android:textSize="16sp"
                android:textStyle="normal" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>